clusters/staging/monitoring/auth-middleware/middleware-basicauth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: monitoring
spec:
  basicAuth:
    secret: basic-auth-secret
    removeHeader: true
