clusters/staging/monitoring/auth-middleware/middleware-ratelimit.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ratelimit
  namespace: monitoring
spec:
  rateLimit:
    average: 100
    burst: 50
    period: 1m
